Bug 315210 - Filtered children of removed expanded items reappear if the filter is cleared
Summary: Filtered children of removed expanded items reappear if the filter is cleared
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-15 16:24 UTC by Frank Reininghaus
Modified: 2013-02-18 22:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2013-02-15 16:24:04 UTC
In a test directory, do:

mkdir a a/b a/b/c && touch a/1 a/b/1 a/b/c/1

Expand all folders, then enter anything (except 1) in the filter bar -> only the folders remain in the view. Then do the following in the Terminal Panel: 

rm -rf a/b 

Disable filter -> note the "free floating items" named "1" which should not be in the view any more.

Looks related to what users mentioned in bug 294616, but note that this does not cause a crash yet. I suspect that the crash is caused by something that is fixed by the recent restructuring of the "compare child items" code.

Reproducible: Always
Comment 1 Frank Reininghaus 2013-02-15 16:33:33 UTC
https://git.reviewboard.kde.org/r/108976/
Comment 2 Frank Reininghaus 2013-02-18 22:53:46 UTC
Git commit e053ecdcd57cc39fdcbc314fc8dd22c8b9dbdd4f by Frank Reininghaus.
Committed on 18/02/2013 at 23:49.
Pushed by freininghaus into branch 'KDE/4.10'.

Remove items from m_filteredItems if their parent is deleted

Fixes the problem that filtered children of expanded deleted folders
reappear if the filter is cleared.
FIXED-IN: 4.10.1
REVIEW: 108976

M  +27   -0    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +51   -0    dolphin/src/tests/kfileitemmodeltest.cpp

http://commits.kde.org/kde-baseapps/e053ecdcd57cc39fdcbc314fc8dd22c8b9dbdd4f